# react-native-platform-components

./: .gitignore  CONTRIBUTING.md  LICENSE  PlatformComponents.podspec  README.md  app.plugin.cjs  expo-module.config.json  package.json  react-native.config.js  tsconfig.json
android/: build.gradle  gradle.properties
android/src/main/jni/: CMakeLists.txt  OnLoad.cpp
assets/: convert-to-gif.sh
example/: .detoxrc.js  app.json  jest.config.js  package.json  tsconfig.json
example-expo/: .gitignore  app.json  babel-transformer.js  babel.config.js  metro.config.js  package.json  tsconfig.json
ios/: DatePicker.h  DatePicker.mm  DatePickerComponentDescriptors.h  DatePickerShadowNode.cpp  DatePickerShadowNode.h  DatePickerView.swift  PCConstants.swift  PCContextMenu.h  PCContextMenu.mm  PCContextMenu.swift  PCDatePicker.h  PCDatePicker.mm  PCDatePickerView.swift  PCLiquidGlass.h  PCLiquidGlass.mm  PCLiquidGlass.swift  PCSegmentedControl.h  PCSegmentedControl.mm  PCSegmentedControl.swift  PCSelectionMenu.h  PCSelectionMenu.mm  PCSelectionMenu.swift  PCSelectionMenuMeasure.mm  PlatformComponentsView.h  PlatformComponentsView.mm  SelectionMenu.h  SelectionMenu.mm  SelectionMenu.swift
plugin/: tsconfig.json
scripts/: generate-readme-gifs.sh
shared/: DatePickerComponentDescriptors.h  DatePickerShadowNode.cpp  DatePickerState.h  PCDatePickerComponentDescriptors-custom.h  PCDatePickerShadowNode-custom.cpp  PCDatePickerShadowNode-custom.h  PCDatePickerState-custom.h  PCSegmentedControlComponentDescriptors-custom.h  PCSegmentedControlShadowNode-custom.cpp  README.md  (+6 more)
(+75 files in other folders)
